Fixing to make it compilable on Java 9